using Dapr.Client;
using EventService.Application.DTOs;
using GoNomads.Shared.Models;

namespace EventService.Infrastructure.GrpcClients;

/// <summary>
/// User Service gRPC å®¢æˆ·ç«¯å®ç°ï¼ˆé€šè¿‡ Daprï¼‰
/// </summary>
public class UserGrpcClient : IUserGrpcClient
{
    private readonly DaprClient _daprClient;
    private readonly ILogger<UserGrpcClient> _logger;
    private const string UserServiceAppId = "user-service";

    public UserGrpcClient(DaprClient daprClient, ILogger<UserGrpcClient> logger)
    {
        _daprClient = daprClient;
        _logger = logger;
    }

    public async Task<OrganizerInfo?> GetUserByIdAsync(Guid userId, CancellationToken cancellationToken = default)
    {
        try
        {
            _logger.LogInformation("ğŸ‘¤ é€šè¿‡ Dapr è°ƒç”¨ UserService è·å–ç”¨æˆ·ä¿¡æ¯: UserId={UserId}", userId);

            // UserService ä½¿ç”¨ string IDï¼Œéœ€è¦è½¬æ¢
            var userIdString = userId.ToString();

            // ä½¿ç”¨ Dapr Service Invocation è°ƒç”¨ UserService
            var response = await _daprClient.InvokeMethodAsync<ApiResponse<UserDto>>(
                HttpMethod.Get,
                UserServiceAppId,
                $"api/v1/users/{userIdString}",
                cancellationToken);

            if (response?.Success == true && response.Data != null)
            {
                var userDto = response.Data;
                return new OrganizerInfo
                {
                    Id = userDto.Id,
                    Name = userDto.Name,
                    Email = userDto.Email
                };
            }

            _logger.LogWarning("âš ï¸ UserService è¿”å›ç©ºæ•°æ®æˆ–å¤±è´¥: UserId={UserId}", userId);
            return null;
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "âŒ è°ƒç”¨ UserService å¤±è´¥: UserId={UserId}", userId);
            return null;
        }
    }

    public async Task<Dictionary<Guid, OrganizerInfo>> GetUsersByIdsAsync(
        IEnumerable<Guid> userIds,
        CancellationToken cancellationToken = default)
    {
        var result = new Dictionary<Guid, OrganizerInfo>();
        var uniqueUserIds = userIds.Distinct().Where(id => id != Guid.Empty).ToList();

        if (!uniqueUserIds.Any())
        {
            return result;
        }

        _logger.LogInformation("ğŸ‘¥ æ‰¹é‡è·å–ç”¨æˆ·ä¿¡æ¯: Count={Count}", uniqueUserIds.Count);

        // å¹¶è¡Œè·å–ç”¨æˆ·ä¿¡æ¯
        var tasks = uniqueUserIds.Select(async userId =>
        {
            var userInfo = await GetUserByIdAsync(userId, cancellationToken);
            return (userId, userInfo);
        });

        var users = await Task.WhenAll(tasks);

        foreach (var (userId, userInfo) in users)
        {
            if (userInfo != null)
            {
                result[userId] = userInfo;
            }
        }

        _logger.LogInformation("âœ… æ‰¹é‡è·å–ç”¨æˆ·ä¿¡æ¯å®Œæˆ: è¯·æ±‚={Requested}, æˆåŠŸ={Success}",
            uniqueUserIds.Count, result.Count);

        return result;
    }
}

/// <summary>
/// UserService è¿”å›çš„ DTOï¼ˆæ˜ å°„ï¼‰
/// </summary>
internal class UserDto
{
    public string Id { get; set; } = string.Empty;
    public string Name { get; set; } = string.Empty;
    public string Email { get; set; } = string.Empty;
}
