using Grpc.Core;
using UserService.Application.Services;
using UserService.Grpc;

namespace UserService.Services.Grpc;

/// <summary>
/// gRPC ç”¨æˆ·ä¿¡æ¯æœåŠ¡å®ç°
/// </summary>
public class GrpcUserService : UserService.Grpc.UserService.UserServiceBase
{
    private readonly IUserService _userService;
    private readonly ILogger<GrpcUserService> _logger;

    public GrpcUserService(
        IUserService userService,
        ILogger<GrpcUserService> logger)
    {
        _userService = userService;
        _logger = logger;
    }

    /// <summary>
    /// è·å–å•ä¸ªç”¨æˆ·ä¿¡æ¯
    /// </summary>
    public override async Task<UserInfoResponse> GetUserInfo(
        GetUserInfoRequest request,
        ServerCallContext context)
    {
        _logger.LogInformation("ğŸ“ gRPC GetUserInfo è°ƒç”¨ - UserId: {UserId}", request.UserId);

        try
        {
            // éªŒè¯è¯·æ±‚
            if (string.IsNullOrWhiteSpace(request.UserId))
            {
                _logger.LogWarning("âš ï¸ UserId ä¸ºç©º");
                return new UserInfoResponse
                {
                    Success = false,
                    ErrorMessage = "User ID is required"
                };
            }

            // è°ƒç”¨åº”ç”¨æœåŠ¡è·å–ç”¨æˆ·
            var user = await _userService.GetUserByIdAsync(request.UserId, context.CancellationToken);

            if (user == null)
            {
                _logger.LogWarning("âš ï¸ ç”¨æˆ·ä¸å­˜åœ¨: {UserId}", request.UserId);
                return new UserInfoResponse
                {
                    UserId = request.UserId,
                    Success = false,
                    ErrorMessage = "User not found"
                };
            }

            _logger.LogInformation("âœ… æˆåŠŸè·å–ç”¨æˆ·ä¿¡æ¯: {Username}", user.Name);

            return new UserInfoResponse
            {
                UserId = user.Id,
                Username = user.Name ?? string.Empty,
                Email = user.Email ?? string.Empty,
                AvatarUrl = string.Empty, // UserDto æš‚æ—¶æ²¡æœ‰ AvatarUrl
                Success = true
            };
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "âŒ è·å–ç”¨æˆ·ä¿¡æ¯å¤±è´¥: {UserId}", request.UserId);
            return new UserInfoResponse
            {
                UserId = request.UserId,
                Success = false,
                ErrorMessage = $"Internal error: {ex.Message}"
            };
        }
    }

    /// <summary>
    /// æ‰¹é‡è·å–ç”¨æˆ·ä¿¡æ¯
    /// </summary>
    public override async Task<GetUsersInfoResponse> GetUsersInfo(
        GetUsersInfoRequest request,
        ServerCallContext context)
    {
        _logger.LogInformation("ğŸ“ gRPC GetUsersInfo è°ƒç”¨ - ç”¨æˆ·æ•°é‡: {Count}", request.UserIds.Count);

        var response = new GetUsersInfoResponse();

        try
        {
            // éªŒè¯è¯·æ±‚
            if (request.UserIds == null || request.UserIds.Count == 0)
            {
                _logger.LogWarning("âš ï¸ UserIds ä¸ºç©º");
                return response;
            }

            // æ‰¹é‡æŸ¥è¯¢ç”¨æˆ·
            var tasks = request.UserIds
                .Where(id => !string.IsNullOrWhiteSpace(id))
                .Select(async userId =>
                {
                    try
                    {
                        var user = await _userService.GetUserByIdAsync(userId, context.CancellationToken);
                        if (user != null)
                        {
                            return new UserInfoResponse
                            {
                                UserId = user.Id,
                                Username = user.Name ?? string.Empty,
                                Email = user.Email ?? string.Empty,
                                AvatarUrl = string.Empty, // UserDto æš‚æ—¶æ²¡æœ‰ AvatarUrl
                                Success = true
                            };
                        }
                        else
                        {
                            return new UserInfoResponse
                            {
                                UserId = userId,
                                Success = false,
                                ErrorMessage = "User not found"
                            };
                        }
                    }
                    catch (Exception ex)
                    {
                        _logger.LogError(ex, "âŒ è·å–ç”¨æˆ·å¤±è´¥: {UserId}", userId);
                        return new UserInfoResponse
                        {
                            UserId = userId,
                            Success = false,
                            ErrorMessage = ex.Message
                        };
                    }
                });

            var users = await Task.WhenAll(tasks);
            response.Users.AddRange(users);

            _logger.LogInformation("âœ… æˆåŠŸè·å– {Count} ä¸ªç”¨æˆ·ä¿¡æ¯", users.Length);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "âŒ æ‰¹é‡è·å–ç”¨æˆ·ä¿¡æ¯å¤±è´¥");
        }

        return response;
    }
}
