using EventService.Application.DTOs;
using EventService.Domain.Entities;
using EventService.Domain.Repositories;
using EventService.Infrastructure.GrpcClients;

namespace EventService.Application.Services;

/// <summary>
/// Event åº”ç”¨æœåŠ¡å®ç°
/// </summary>
public class EventApplicationService : IEventService
{
    private readonly IEventRepository _eventRepository;
    private readonly IEventParticipantRepository _participantRepository;
    private readonly IEventFollowerRepository _followerRepository;
    private readonly ICityGrpcClient _cityGrpcClient;
    private readonly IUserGrpcClient _userGrpcClient;
    private readonly ILogger<EventApplicationService> _logger;

    public EventApplicationService(
        IEventRepository eventRepository,
        IEventParticipantRepository participantRepository,
        IEventFollowerRepository followerRepository,
        ICityGrpcClient cityGrpcClient,
        IUserGrpcClient userGrpcClient,
        ILogger<EventApplicationService> logger)
    {
        _eventRepository = eventRepository;
        _participantRepository = participantRepository;
        _followerRepository = followerRepository;
        _cityGrpcClient = cityGrpcClient;
        _userGrpcClient = userGrpcClient;
        _logger = logger;
    }

    public async Task<EventResponse> CreateEventAsync(CreateEventRequest request, Guid organizerId)
    {
        _logger.LogInformation("ğŸ“ åˆ›å»ºæ–° Eventï¼ŒOrganizer: {OrganizerId}", organizerId);

        // ä½¿ç”¨é¢†åŸŸå·¥å‚æ–¹æ³•åˆ›å»ºå®ä½“
        var @event = Event.Create(
            title: request.Title,
            organizerId: organizerId,
            startTime: request.StartTime,
            description: request.Description,
            cityId: request.CityId,
            location: request.Location,
            address: request.Address,
            imageUrl: request.ImageUrl,
            images: request.Images?.ToArray(),
            category: request.Category,
            endTime: request.EndTime,
            maxParticipants: request.MaxParticipants,
            locationType: request.LocationType,
            meetingLink: request.MeetingLink,
            latitude: request.Latitude,
            longitude: request.Longitude,
            tags: request.Tags?.ToArray());

        // æŒä¹…åŒ–
        var createdEvent = await _eventRepository.CreateAsync(@event);

        return MapToResponse(createdEvent);
    }

    public async Task<EventResponse> GetEventAsync(Guid id, Guid? userId = null)
    {
        var @event = await _eventRepository.GetByIdAsync(id);
        if (@event == null)
        {
            throw new KeyNotFoundException($"Event {id} ä¸å­˜åœ¨");
        }

        var response = MapToResponse(@event);

        // å¦‚æœæä¾›äº† userIdï¼Œæ£€æŸ¥å‚ä¸çŠ¶æ€å’Œç»„ç»‡è€…èº«ä»½
        if (userId.HasValue)
        {
            // æš‚æ—¶ä¸ä½¿ç”¨ follower åŠŸèƒ½,åªæ£€æŸ¥å‚ä¸çŠ¶æ€
            response.IsFollowing = false;
            response.IsParticipant = await _participantRepository.IsParticipantAsync(id, userId.Value);
            
            // åˆ¤æ–­å½“å‰ç”¨æˆ·æ˜¯å¦æ˜¯æ´»åŠ¨ç»„ç»‡è€…
            response.IsOrganizer = response.OrganizerId == userId.Value;
            
            _logger.LogInformation("ğŸ‘¥ ç”¨æˆ· {UserId} æ˜¯å¦å‚ä¸äº†æ´»åŠ¨ {EventId}: {IsParticipant}", userId.Value, id, response.IsParticipant);
            _logger.LogInformation("ğŸ‘¥ ç”¨æˆ· {UserId} æ˜¯å¦æ˜¯æ´»åŠ¨ {EventId} çš„ç»„ç»‡è€…: {IsOrganizer}", userId.Value, id, response.IsOrganizer);
        }

        // æš‚æ—¶å°†å…³æ³¨è€…æ•°é‡è®¾ä¸º 0
        response.FollowerCount = 0;

        // è·å–å‚ä¸è€…åˆ—è¡¨
        var participants = await GetParticipantsAsync(id);
        
        // ğŸ”§ ä¸ºå‚ä¸è€…å¡«å……ç”¨æˆ·ä¿¡æ¯ï¼ˆé€šè¿‡ gRPC è°ƒç”¨ UserServiceï¼‰
        if (participants.Any())
        {
            var userIds = participants.Select(p => p.UserId).Distinct().ToList();
            _logger.LogInformation("ğŸ“ é€šè¿‡ gRPC è·å– {Count} ä¸ªå‚ä¸è€…çš„å®Œæ•´ç”¨æˆ·ä¿¡æ¯", userIds.Count);
            
            try
            {
                var users = await _userGrpcClient.GetUsersInfoByIdsAsync(userIds);
                
                foreach (var participant in participants)
                {
                    if (users.TryGetValue(participant.UserId, out var userInfo))
                    {
                        participant.User = userInfo;
                    }
                }
                
                _logger.LogInformation("âœ… æˆåŠŸä¸º {Count} ä¸ªå‚ä¸è€…å¡«å……ç”¨æˆ·ä¿¡æ¯", participants.Count(p => p.User != null));
            }
            catch (Exception ex)
            {
                _logger.LogError(ex, "âŒ è·å–å‚ä¸è€…ç”¨æˆ·ä¿¡æ¯å¤±è´¥");
                // ä¸æŠ›å‡ºå¼‚å¸¸ï¼Œè¿”å›ä¸å®Œæ•´çš„æ•°æ®
            }
        }
        
        response.Participants = participants.ToList();

        // ğŸ”§ ä¿®æ­£å‚ä¸è€…æ•°é‡:ä½¿ç”¨å®é™…å‚ä¸è€…åˆ—è¡¨çš„é•¿åº¦,ç¡®ä¿æ•°æ®å‡†ç¡®
        response.CurrentParticipants = participants.Count;

        // å¡«å……å…³è”æ•°æ®
        await EnrichEventResponsesWithRelatedDataAsync(new List<EventResponse> { response });

        return response;
    }

    public async Task<EventResponse> UpdateEventAsync(Guid id, UpdateEventRequest request, Guid userId)
    {
        var @event = await _eventRepository.GetByIdAsync(id);
        if (@event == null)
        {
            throw new KeyNotFoundException($"Event {id} ä¸å­˜åœ¨");
        }

        // ä½¿ç”¨é¢†åŸŸæ–¹æ³•æ›´æ–°ï¼ˆåŒ…å«æƒé™éªŒè¯ï¼‰
        @event.Update(
            userId: userId,
            title: request.Title,
            description: request.Description,
            cityId: request.CityId,
            location: request.Location,
            address: request.Address,
            imageUrl: request.ImageUrl,
            images: request.Images?.ToArray(),
            category: request.Category,
            startTime: request.StartTime,
            endTime: request.EndTime,
            maxParticipants: request.MaxParticipants,
            status: request.Status,
            locationType: request.LocationType,
            meetingLink: request.MeetingLink,
            latitude: request.Latitude,
            longitude: request.Longitude,
            tags: request.Tags?.ToArray());

        var updatedEvent = await _eventRepository.UpdateAsync(@event);

        return MapToResponse(updatedEvent);
    }

    /// <summary>
    /// å–æ¶ˆæ´»åŠ¨
    /// </summary>
    public async Task<EventResponse> CancelEventAsync(Guid id, Guid userId)
    {
        var @event = await _eventRepository.GetByIdAsync(id);
        if (@event == null)
        {
            throw new KeyNotFoundException($"Event {id} ä¸å­˜åœ¨");
        }

        // éªŒè¯æƒé™ï¼šåªæœ‰ç»„ç»‡è€…å¯ä»¥å–æ¶ˆ
        if (@event.OrganizerId != userId)
        {
            throw new UnauthorizedAccessException("åªæœ‰ç»„ç»‡è€…å¯ä»¥å–æ¶ˆæ´»åŠ¨");
        }

        // ä½¿ç”¨é¢†åŸŸæ–¹æ³•å–æ¶ˆ
        @event.Cancel(userId);

        var updatedEvent = await _eventRepository.UpdateAsync(@event);

        _logger.LogInformation("âœ… æ´»åŠ¨ {EventId} å·²è¢«ç”¨æˆ· {UserId} å–æ¶ˆ", id, userId);

        return MapToResponse(updatedEvent);
    }

    public async Task<(List<EventResponse> Events, int Total)> GetEventsAsync(
        Guid? cityId = null,
        string? category = null,
        string? status = null,
        int page = 1,
        int pageSize = 20,
        Guid? userId = null)
    {
        var (events, total) = await _eventRepository.GetListAsync(cityId, category, status, page, pageSize);

        // è½¬æ¢ä¸º DTO
        var responses = events.Select(MapToResponse).ToList();

        // æ‰¹é‡è·å–å…³è”æ•°æ®
        await EnrichEventResponsesWithRelatedDataAsync(responses);

        // ğŸ”§ ä¿®æ­£å‚ä¸è€…æ•°é‡:æ‰¹é‡æŸ¥è¯¢æ¯ä¸ªäº‹ä»¶çš„å®é™…å‚ä¸è€…æ•°é‡
        foreach (var response in responses)
        {
            var participantCount = await _participantRepository.CountByEventIdAsync(response.Id);
            response.CurrentParticipants = participantCount;
        }

        // å¦‚æœæœ‰ç”¨æˆ·ID,æ‰¹é‡æ£€æŸ¥å‚ä¸çŠ¶æ€
        if (userId.HasValue)
        {
            await EnrichEventParticipationStatusAsync(responses, userId.Value);
        }

        return (responses, total);
    }

    /// <summary>
    /// ä¸ºäº‹ä»¶åˆ—è¡¨å¡«å……å…³è”æ•°æ®ï¼ˆåŸå¸‚ã€ç»„ç»‡è€…ä¿¡æ¯ï¼‰
    /// </summary>
    private async Task EnrichEventResponsesWithRelatedDataAsync(List<EventResponse> responses)
    {
        _logger.LogInformation("ğŸ” å¼€å§‹ä¸º {Count} ä¸ªäº‹ä»¶å¡«å……å…³è”æ•°æ®", responses.Count);

        if (!responses.Any())
        {
            _logger.LogInformation("âš ï¸ äº‹ä»¶åˆ—è¡¨ä¸ºç©ºï¼Œè·³è¿‡å…³è”æ•°æ®å¡«å……");
            return;
        }

        try
        {
            // æ”¶é›†æ‰€æœ‰éœ€è¦æŸ¥è¯¢çš„ CityId å’Œ OrganizerId
            var cityIds = responses
                .Where(r => r.CityId.HasValue)
                .Select(r => r.CityId!.Value)
                .Distinct()
                .ToList();

            var organizerIds = responses
                .Select(r => r.OrganizerId)
                .Distinct()
                .ToList();

            _logger.LogInformation("ğŸ“Š éœ€è¦æŸ¥è¯¢ {CityCount} ä¸ªåŸå¸‚å’Œ {OrganizerCount} ä¸ªç»„ç»‡è€…",
                cityIds.Count, organizerIds.Count);

            // å¹¶è¡Œæ‰¹é‡è·å–åŸå¸‚å’Œç”¨æˆ·ä¿¡æ¯
            var getCitiesTask = _cityGrpcClient.GetCitiesByIdsAsync(cityIds);
            var getUsersTask = _userGrpcClient.GetUsersByIdsAsync(organizerIds);

            await Task.WhenAll(getCitiesTask, getUsersTask);

            var cities = await getCitiesTask;
            var users = await getUsersTask;

            _logger.LogInformation("ğŸ“¥ è·å–åˆ° {CityCount} ä¸ªåŸå¸‚å’Œ {UserCount} ä¸ªç»„ç»‡è€…ä¿¡æ¯",
                cities.Count, users.Count);

            // å¡«å……æ•°æ®åˆ°æ¯ä¸ª EventResponse
            foreach (var response in responses)
            {
                // å¡«å……åŸå¸‚ä¿¡æ¯
                if (response.CityId.HasValue && cities.TryGetValue(response.CityId.Value, out var cityInfo))
                {
                    response.City = cityInfo;
                }

                // å¡«å……ç»„ç»‡è€…ä¿¡æ¯
                if (users.TryGetValue(response.OrganizerId, out var organizerInfo))
                {
                    response.Organizer = organizerInfo;
                }
            }

            _logger.LogInformation("âœ… å·²ä¸º {Count} ä¸ªäº‹ä»¶å¡«å……å…³è”æ•°æ®ï¼ˆåŸå¸‚: {CityCount}, ç»„ç»‡è€…: {OrganizerCount}ï¼‰",
                responses.Count, cities.Count, users.Count);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "âŒ å¡«å……äº‹ä»¶å…³è”æ•°æ®å¤±è´¥ï¼Œå°†è¿”å›ä¸å®Œæ•´çš„æ•°æ®");
            // ä¸æŠ›å‡ºå¼‚å¸¸ï¼Œå…è®¸è¿”å›ä¸å®Œæ•´çš„æ•°æ®
        }
    }

    /// <summary>
    /// æ‰¹é‡å¡«å……äº‹ä»¶å‚ä¸çŠ¶æ€
    /// </summary>
    private async Task EnrichEventParticipationStatusAsync(List<EventResponse> responses, Guid userId)
    {
        _logger.LogInformation("ğŸ‘¥ å¼€å§‹ä¸º {Count} ä¸ªäº‹ä»¶å¡«å……å‚ä¸çŠ¶æ€ï¼Œç”¨æˆ·ID: {UserId}", responses.Count, userId);

        if (!responses.Any())
        {
            return;
        }

        try
        {
            // æ‰¹é‡æ£€æŸ¥ç”¨æˆ·æ˜¯å¦å‚ä¸äº†è¿™äº›æ´»åŠ¨å’Œæ˜¯å¦æ˜¯ç»„ç»‡è€…
            foreach (var response in responses)
            {
                response.IsParticipant = await _participantRepository.IsParticipantAsync(response.Id, userId);
                response.IsOrganizer = response.OrganizerId == userId;
                _logger.LogInformation("ğŸ‘¥ ç”¨æˆ· {UserId} æ˜¯å¦å‚ä¸äº†æ´»åŠ¨ {EventId}: {IsParticipant}", userId, response.Id, response.IsParticipant);
                _logger.LogInformation("ğŸ‘¥ ç”¨æˆ· {UserId} æ˜¯å¦æ˜¯æ´»åŠ¨ {EventId} çš„ç»„ç»‡è€…: {IsOrganizer}", userId, response.Id, response.IsOrganizer);
            }

            var participatedCount = responses.Count(r => r.IsParticipant);
            var organizerCount = responses.Count(r => r.IsOrganizer);
            _logger.LogInformation("âœ… ç”¨æˆ·å‚ä¸äº† {ParticipatedCount}/{TotalCount} ä¸ªæ´»åŠ¨ï¼Œç»„ç»‡äº† {OrganizerCount} ä¸ªæ´»åŠ¨",
                participatedCount, responses.Count, organizerCount);
        }
        catch (Exception ex)
        {
            _logger.LogError(ex, "âŒ å¡«å……å‚ä¸çŠ¶æ€å¤±è´¥");
        }
    }

    public async Task<ParticipantResponse> JoinEventAsync(Guid eventId, Guid userId, JoinEventRequest request)
    {
        _logger.LogInformation("ğŸ‘¥ ç”¨æˆ· {UserId} ç”³è¯·å‚åŠ  Event {EventId}", userId, eventId);

        // æ£€æŸ¥ Event æ˜¯å¦å­˜åœ¨
        var @event = await _eventRepository.GetByIdAsync(eventId);
        if (@event == null)
        {
            throw new KeyNotFoundException($"Event {eventId} ä¸å­˜åœ¨");
        }

        // æ£€æŸ¥æ˜¯å¦å·²å‚åŠ 
        if (await _participantRepository.IsParticipantAsync(eventId, userId))
        {
            throw new InvalidOperationException("æ‚¨å·²ç»å‚åŠ äº†è¿™ä¸ª Event");
        }

        // æ£€æŸ¥æ˜¯å¦å¯ä»¥å‚åŠ ï¼ˆé¢†åŸŸé€»è¾‘ï¼‰
        if (!@event.CanJoin())
        {
            throw new InvalidOperationException("Event å·²æ»¡å‘˜æˆ–çŠ¶æ€ä¸å…è®¸å‚åŠ ");
        }

        // åˆ›å»ºå‚ä¸è®°å½•
        var participant = EventParticipant.Create(eventId, userId);
        var createdParticipant = await _participantRepository.CreateAsync(participant);

        // æ›´æ–°å‚ä¸äººæ•°ï¼ˆé¢†åŸŸé€»è¾‘ï¼‰
        @event.AddParticipant();
        await _eventRepository.UpdateAsync(@event);

        return MapToParticipantResponse(createdParticipant);
    }

    public async Task LeaveEventAsync(Guid eventId, Guid userId)
    {
        _logger.LogInformation("ğŸ‘‹ ç”¨æˆ· {UserId} å–æ¶ˆå‚åŠ  Event {EventId}", userId, eventId);

        // æŸ¥æ‰¾å‚ä¸è®°å½•
        var participant = await _participantRepository.GetAsync(eventId, userId);
        if (participant == null)
        {
            throw new KeyNotFoundException("æ‚¨æœªå‚åŠ æ­¤ Event");
        }

        // åˆ é™¤å‚ä¸è®°å½•
        await _participantRepository.DeleteAsync(participant.Id);

        // æ›´æ–°å‚ä¸äººæ•°
        var @event = await _eventRepository.GetByIdAsync(eventId);
        if (@event != null)
        {
            @event.RemoveParticipant();
            await _eventRepository.UpdateAsync(@event);
        }
    }

    public async Task<FollowerResponse> FollowEventAsync(Guid eventId, Guid userId, FollowEventRequest request)
    {
        _logger.LogInformation("â­ ç”¨æˆ· {UserId} å…³æ³¨ Event {EventId}", userId, eventId);

        // æ£€æŸ¥ Event æ˜¯å¦å­˜åœ¨
        if (!await _eventRepository.ExistsAsync(eventId))
        {
            throw new KeyNotFoundException($"Event {eventId} ä¸å­˜åœ¨");
        }

        // æ£€æŸ¥æ˜¯å¦å·²å…³æ³¨
        if (await _followerRepository.IsFollowingAsync(eventId, userId))
        {
            throw new InvalidOperationException("æ‚¨å·²ç»å…³æ³¨äº†è¿™ä¸ª Event");
        }

        // åˆ›å»ºå…³æ³¨è®°å½•
        var follower = EventFollower.Create(eventId, userId, request.NotificationEnabled);
        var createdFollower = await _followerRepository.CreateAsync(follower);

        return MapToFollowerResponse(createdFollower);
    }

    public async Task UnfollowEventAsync(Guid eventId, Guid userId)
    {
        _logger.LogInformation("ğŸ’” ç”¨æˆ· {UserId} å–æ¶ˆå…³æ³¨ Event {EventId}", userId, eventId);

        // æŸ¥æ‰¾å…³æ³¨è®°å½•
        var follower = await _followerRepository.GetAsync(eventId, userId);
        if (follower == null)
        {
            throw new KeyNotFoundException("æ‚¨æœªå…³æ³¨æ­¤ Event");
        }

        // åˆ é™¤å…³æ³¨è®°å½•
        await _followerRepository.DeleteAsync(follower.Id);
    }

    public async Task<List<ParticipantResponse>> GetParticipantsAsync(Guid eventId)
    {
        var participants = await _participantRepository.GetByEventIdAsync(eventId);
        return participants.Select(MapToParticipantResponse).ToList();
    }

    public async Task<List<FollowerResponse>> GetFollowersAsync(Guid eventId)
    {
        var followers = await _followerRepository.GetByEventIdAsync(eventId);
        return followers.Select(MapToFollowerResponse).ToList();
    }

    public async Task<List<EventResponse>> GetUserCreatedEventsAsync(Guid userId)
    {
        var events = await _eventRepository.GetByOrganizerIdAsync(userId);
        return events.Select(MapToResponse).ToList();
    }

    public async Task<List<EventResponse>> GetUserJoinedEventsAsync(Guid userId)
    {
        var participants = await _participantRepository.GetByUserIdAsync(userId);
        var eventIds = participants.Select(p => p.EventId).ToList();

        var events = new List<Event>();
        foreach (var eventId in eventIds)
        {
            var @event = await _eventRepository.GetByIdAsync(eventId);
            if (@event != null)
            {
                events.Add(@event);
            }
        }

        return events.Select(MapToResponse).ToList();
    }

    public async Task<List<EventResponse>> GetUserFollowingEventsAsync(Guid userId)
    {
        var followers = await _followerRepository.GetByUserIdAsync(userId);
        var eventIds = followers.Select(f => f.EventId).ToList();

        var events = new List<Event>();
        foreach (var eventId in eventIds)
        {
            var @event = await _eventRepository.GetByIdAsync(eventId);
            if (@event != null)
            {
                events.Add(@event);
            }
        }

        return events.Select(MapToResponse).ToList();
    }

    #region Mapping Methods

    private EventResponse MapToResponse(Event @event)
    {
        return new EventResponse
        {
            Id = @event.Id,
            Title = @event.Title,
            Description = @event.Description,
            OrganizerId = @event.OrganizerId,
            CityId = @event.CityId,
            Location = @event.Location,
            Address = @event.Address,
            ImageUrl = @event.ImageUrl,
            Images = @event.Images?.ToList(),
            Category = @event.Category,
            StartTime = @event.StartTime,
            EndTime = @event.EndTime,
            MaxParticipants = @event.MaxParticipants,
            CurrentParticipants = @event.CurrentParticipants,
            Status = @event.Status,
            LocationType = @event.LocationType,
            MeetingLink = @event.MeetingLink,
            Latitude = @event.Latitude,
            Longitude = @event.Longitude,
            Tags = @event.Tags?.ToList(),
            IsFeatured = @event.IsFeatured,
            CreatedAt = @event.CreatedAt,
            UpdatedAt = @event.UpdatedAt
        };
    }

    private ParticipantResponse MapToParticipantResponse(EventParticipant participant)
    {
        return new ParticipantResponse
        {
            Id = participant.Id,
            EventId = participant.EventId,
            UserId = participant.UserId,
            Status = participant.Status,
            RegisteredAt = participant.RegisteredAt
        };
    }

    private FollowerResponse MapToFollowerResponse(EventFollower follower)
    {
        return new FollowerResponse
        {
            Id = follower.Id,
            EventId = follower.EventId,
            UserId = follower.UserId,
            FollowedAt = follower.FollowedAt,
            NotificationEnabled = follower.NotificationEnabled
        };
    }

    #endregion
}
